# rust_utils

./: Cargo.toml
src/: http_client_utils.rs  lib.rs
src/http_client_utils/: get.rs  post.rs
