[package]
name = "rust_utils"
version = "0.2.0"
edition = "2021"

[features]
default = []
http_client = []

[dependencies]
bytes = { version = "1.8.0", features = ["serde"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
